# rainlang

./: .gas-snapshot  .gitignore  .prettierignore  .soldeerignore  CLAUDE.md  Cargo.toml  README.md  REUSE.toml  TESTING.md  flake.nix  foundry.toml  remappings.txt  slither.config.json
.github/workflows/: copy-artifacts.yaml  debug-rpc-estimate.yaml  git-clean.yaml  manual-sol-artifacts.yaml  package-release.yaml  publish-soldeer.yaml  rainix-rs-static.yaml  rainix-rs-test.yaml  rainix-sol.yaml  rainix.yaml
audit/: known-false-positives.md
audit/2026-03-23-01/: triage.md
crates/abi/: IExpressionDeployerV3.json  IInterpreterStoreV3.json  IInterpreterV4.json  IParserPragmaV1.json  IParserV2.json  Rainlang.json  RainlangExpressionDeployer.json  RainlangInterpreter.json  RainlangParser.json  RainlangStore.json  TestERC20.json
crates/bindings/: Cargo.toml
crates/bindings/abi/: IInterpreterStoreV3.json  IParserPragmaV1.json  Rainlang.json  RainlangInterpreter.json  RainlangParser.json
crates/bindings/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: fork.rs  main.rs
crates/cli/src/commands/: eval.rs  parse.rs
crates/dispair/: Cargo.toml
crates/eval/: Cargo.toml
crates/eval/src/: error.rs  eval.rs  fork.rs  lib.rs  namespace.rs  trace.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  v2.rs
crates/test_fixtures/: Cargo.toml
crates/test_fixtures/abi/: Rainlang.json  RainlangExpressionDeployer.json  RainlangInterpreter.json  RainlangParser.json
crates/test_fixtures/src/: lib.rs
script/: Build.sol  BuildAuthoringMeta.sol  BuildPointers.sol  CopyArtifacts.sol  Deploy.sol
script/lib/: LibCopyArtifacts.sol
src/abstract/: BaseRainlangExtern.sol  BaseRainlangSubParser.sol
src/concrete/: Rainlang.sol  RainlangExpressionDeployer.sol  RainlangInterpreter.sol  RainlangParser.sol  RainlangStore.sol  RainterpreterParser.sol
src/error/: ErrExtern.sol  ErrIntegrity.sol  ErrRainType.sol
src/lib/deploy/: LibInterpreterDeploy.sol
src/lib/eval/: LibEval.sol
src/lib/integrity/: LibIntegrityCheck.sol
src/lib/op/: LibAllStandardOps.sol
src/lib/op/00/: LibOpConstant.sol  LibOpContext.sol  LibOpExtern.sol  LibOpStack.sol
src/lib/op/bitwise/: LibOpBitwiseAnd.sol  LibOpBitwiseCountOnes.sol  LibOpBitwiseDecode.sol  LibOpBitwiseEncode.sol  LibOpBitwiseOr.sol  LibOpBitwiseShiftLeft.sol  LibOpBitwiseShiftRight.sol
src/lib/op/call/: LibOpCall.sol
src/lib/op/crypto/: LibOpHash.sol
src/lib/op/erc20/: LibOpERC20Allowance.sol  LibOpERC20BalanceOf.sol  LibOpERC20TotalSupply.sol
src/lib/op/erc5313/: LibOpERC5313Owner.sol
src/lib/op/erc721/: LibOpERC721BalanceOf.sol  LibOpERC721OwnerOf.sol
src/lib/op/evm/: LibOpBlockNumber.sol  LibOpBlockTimestamp.sol  LibOpChainId.sol
src/lib/op/logic/: LibOpAny.sol  LibOpBinaryEqualTo.sol  LibOpConditions.sol  LibOpEnsure.sol  LibOpEqualTo.sol  LibOpEvery.sol  LibOpGreaterThan.sol  LibOpGreaterThanOrEqualTo.sol  LibOpIf.sol  LibOpIsZero.sol  LibOpLessThan.sol  LibOpLessThanOrEqualTo.sol
src/lib/op/math/: LibOpAbs.sol  LibOpAdd.sol  LibOpAvg.sol  LibOpCeil.sol  LibOpDiv.sol  LibOpE.sol  LibOpExp.sol  LibOpExp2.sol  LibOpFloor.sol  LibOpFrac.sol  LibOpGm.sol  LibOpHeadroom.sol  LibOpInv.sol  LibOpMax.sol  LibOpMaxNegativeValue.sol  LibOpMaxPositiveValue.sol  LibOpMin.sol  LibOpMul.sol  (+6 more)
src/lib/parse/: LibParse.sol  LibParseError.sol  LibParseInterstitial.sol  LibParseOperand.sol  LibParsePragma.sol  LibParseState.sol  LibSubParse.sol
src/lib/state/: LibInterpreterState.sol  LibInterpreterStateDataContract.sol
test/abstract/: OpTest.sol  OperandTest.sol  ParseLiteralTest.sol  ParseTest.sol  RainlangExpressionDeployerDeploymentTest.sol
test/lib/integrity/: LibIntegrityFnPointers.sol
test/lib/operand/: LibOperand.sol
test/lib/parse/: LibMetaFixture.sol
test/lib/string/: LibCamelToKebab.t.sol
test/lib/typecast/: LibTestCast.sol
test/src/abstract/: BaseRainlangExtern.construction.t.sol  BaseRainlangExtern.ierc165.t.sol  BaseRainlangExtern.integrityOpcodeRange.t.sol  BaseRainlangSubParser.ierc165.t.sol  BaseRainlangSubParser.subParseLiteral2.t.sol  BaseRainlangSubParser.subParseWord2.t.sol  ChildRainlangExtern.sol  ChildRainlangSubParser.sol  EmptyPointersExtern.sol  EmptyWordParsersSubParser.sol  HappyPathLiteralSubParser.sol  MismatchedExternMoreIntegrity.sol  MismatchedExternMoreOpcodes.sol  MismatchedLiteralSubParser.sol  MismatchedWordSubParser.sol  NoMatchLiteralSubParser.sol  TestableExtern.sol  TwoOpExtern.sol
test/src/concrete/: MockExternBadLiteralIndex.sol  ModifierTestParser.sol  Rainlang.ierc165.t.sol  Rainlang.t.sol  RainlangExpressionDeployer.deployCheck.t.sol  RainlangExpressionDeployer.describedByMetaV1.t.sol  RainlangExpressionDeployer.ierc165.t.sol  RainlangExpressionDeployer.meta.t.sol  RainlangExpressionDeployer.parse2.t.sol  RainlangExpressionDeployer.parsePragma1.t.sol  RainlangExpressionDeployer.pointers.t.sol  RainlangInterpreter.eval.nonZeroSourceIndex.t.sol  RainlangInterpreter.eval.t.sol  RainlangInterpreter.extrospect.t.sol  RainlangInterpreter.ierc165.t.sol  RainlangInterpreter.pointers.t.sol  RainlangInterpreter.stateOverlay.t.sol  RainlangInterpreter.t.sol  RainlangInterpreter.zeroFunctionPointers.t.sol  RainlangParser.ierc165.t.sol  RainlangParser.parseMemoryOverflow.t.sol  RainlangParser.parsePragmaEmpty.t.sol  RainlangParser.parserPragma.t.sol  RainlangParser.pointers.t.sol  RainlangParser.unsafeParse.t.sol  RainlangReferenceExtern.contextCallingContract.t.sol  RainlangReferenceExtern.contextRainlen.t.sol  RainlangReferenceExtern.contextSender.t.sol  RainlangReferenceExtern.describedByMetaV1.t.sol  RainlangReferenceExtern.ierc165.t.sol  RainlangReferenceExtern.intInc.t.sol  RainlangReferenceExtern.pointers.t.sol  RainlangReferenceExtern.repeat.t.sol  RainlangReferenceExtern.stackOperand.t.sol  RainlangReferenceExtern.subParserIndexOutOfBounds.t.sol  RainlangReferenceExtern.unknownWord.t.sol  RainlangStore.getUninitialized.t.sol  RainlangStore.ierc165.t.sol  RainlangStore.namespaceIsolation.t.sol  RainlangStore.overwriteKey.t.sol  (+4 more)
test/utils/: TestERC20.sol
(+205 files in other folders)
