[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "CAL-1.0"
homepage = "https://github.com/rainlanguage/rainlang"

[workspace.dependencies]
alloy = { version = "1.0.9", features = ["sol-types", "json", "json-abi"] }
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
serde = "1.0.160"
serde_bytes = "0.11.9"
serde_json = "1.0.112"
thiserror = "1.0.56"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = { version = "0.11.17", features = ["json"] }
once_cell = "1.17.1"
eyre = "0.6"
rain-error-decoding = "0.1.2"
wasm-bindgen-utils = "0.0.10"

[workspace.dependencies.rainlang_parser]
path = "crates/parser"

[workspace.dependencies.rainlang_dispair]
path = "crates/dispair"
version = "0.1.10"

[workspace.dependencies.rainlang_bindings]
path = "crates/bindings"
version = "0.1.15"

[workspace.dependencies.rainlang-eval]
path = "crates/eval"

[workspace.dependencies.rainlang_test_fixtures]
path = "crates/test_fixtures"
