[package]
name = "rainlang_bindings"
version = "0.1.11"
edition.workspace = true
license.workspace = true
description = "Alloy Solidity contract bindings for the Rainlang interpreter, parser, and expression deployer."
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true }
