[package]
name = "rainlang-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
alloy = { workspace = true }
thiserror = { workspace = true }
rainlang_bindings = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
rain-error-decoding = { workspace = true }

# The forking executor (multi-fork, calls, tracing, replay) now lives in the
# published rain-forker crate instead of the unpublishable foundry-evm git dep.
# Native-only: forking against a live RPC has no meaning on wasm.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rain-forker = "0.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-utils.workspace = true

[dev-dependencies]
tracing = { workspace = true }
rainlang_test_fixtures = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
tokio = { version = "1.28.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
