[package]
name = "rainlang_parser"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Rainlang Parser Rust Crate."
homepage.workspace = true

[dependencies]
rainlang_dispair = { workspace = true }
rainlang_bindings = { workspace = true }
alloy = { workspace = true, features = [
  "providers",
  "network",
  "rpc-types-eth",
] }
thiserror = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.28.0", features = ["full"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.28.0", features = [
  "sync",
  "macros",
  "io-util",
  "rt",
  "time",
] }
