[package]
name = "rainlang_test_fixtures"
version = "0.1.2"
# Path dev-dependency of `cli`/`eval` tests only; never resolved from crates.io,
# and its `sol!` macros read ABI JSON from the sibling `bindings` crate so it
# cannot build standalone in a published tarball. Not a published crate.
publish = false
edition.workspace = true
license.workspace = true
description = "Local EVM test fixtures (deployer, interpreter, parser, store, and ERC20 helpers) for testing against the Rainlang interpreter."
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true, features = [
  "node-bindings",
  "sol-types",
  "rpc-types",
  "provider-http",
  "network",
  "contract",
  "signer-local",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js", "js-sys"] }
