[package]
name = "rainlang_test_fixtures"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Local EVM test fixtures (deployer, interpreter, parser, store, and ERC20 helpers) for testing against the Rainlang interpreter."
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true, features = [
  "node-bindings",
  "sol-types",
  "rpc-types",
  "provider-http",
  "network",
  "contract",
  "signer-local",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js", "js-sys"] }
